Fixed Overflow

--- a/about.css
+++ b/about.css
@@ -37,6 +37,7 @@
     width: fit-content;
     text-align: center;
     border: 1px solid white;
+    overflow-x: none;
 }
 
 .hobbies h3 {
